--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ twitter_username: jekyllrb
 github_username:  ebdude
 disqus:
   shortname: ebdudes-jekyll-site
+  
+ timezone:America/California
 # Build settings
 markdown: kramdown
 theme: minima
